# timescale

./: CITATION.cff  LICENSE  MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: auto-update-bulletin-a.yml  auto-update-files.yml  python-request.yml
doc/: environment.yml
doc/source/: conf.py  index.rst
doc/source/_assets/: timescale-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: eop.rst  time.rst  utilities.rst
doc/source/getting_started/: Citations.rst  Contributing.rst  Getting-Started.rst  Install.rst  Resources.rst
doc/source/release_notes/: release-v0.0.1.rst  release-v0.0.2.rst  release-v0.0.3.rst  release-v0.0.4.rst  release-v0.0.5.rst  release-v0.0.6.rst
test/: conftest.py  test_eop.py  test_leap_seconds.py  test_time.py  test_utilities.py
timescale/: __init__.py  eop.py  time.py  utilities.py  version.py
timescale/data/: deltat.data  finals.all  leap-seconds.list  mean-pole.tab  merged_deltat.data
