[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "timescale"
description = "Python tools for time and astronomical calculations"
keywords = [
    "Time",
    "Leap Seconds",
    "TAI",
    "GPS",
    "UT1",
    "TT",
]

authors = [
    {name = "Tyler Sutterley"},
    {name = "Karen Alley"},
    {name = "Kelly Brunt"},
    {name = "Susan Howard"},
    {name = "Laurie Padman"},
    {name = "Matt Siegfried"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [{ name = "timescale contributors" }]
license = {file = "LICENSE"}
readme = "README.rst"

requires-python = "~=3.6"
dependencies = [
    "lxml",
    "numpy",
    "python-dateutil",
    "scipy>=1.10.1",
    "setuptools_scm",
]

dynamic = ["version"]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://timescale.readthedocs.io"
Documentation = "https://timescale.readthedocs.io"
Repository = "https://github.com/tsutterley/timescale"
Issues = "https://github.com/tsutterley/timescale/issues"

[project.optional-dependencies]
doc = ["docutils", "fontconfig", "freetype", "graphviz", "numpydoc", "sphinx", "sphinx-argparse>=0.4", "sphinx_rtd_theme"]
dev = ["flake8", "pytest>=4.6", "pytest-cov"]

[tool.setuptools.packages.find]
exclude = ["test*", "run*"]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".git"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "timescale",
    "test",
]
omit = [
    "setup.py",
    "conf.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
